# AI_devs2

./: .pre-commit-config.yaml  Cargo.toml  README.md  example.env
qdrant/: docker-compose.yml
src/: aidevs.rs  brave_search.rs  cli.rs  config.rs  main.rs  render_form.rs  tasks.rs  utils.rs
src/tasks/: blogger.rs  embedding.rs  functions.rs  gnome.rs  google.rs  helloapi.rs  inprompt.rs  knowledge.rs  liar.rs  meme.rs  mod.rs  moderation.rs  optimaldb.rs  ownapi.rs  ownapipro.rs  people.rs  rodo.rs  scraper.rs  search.rs  tools.rs  whisper.rs  whoami.rs
