[package]
name = "ai_devs2"
version = "0.1.0"
edition = "2021"
authors = ["Rafal Ulko <rafal.ulko@gmail.com>"]

[dependencies]
anyhow = "1.0.81"
async-openai = "0.19.1"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
envconfig = "0.10.0"
futures = "0.3.30"
log = "0.4.21"
qdrant-client = "1.8.0"
regex = "1.10.4"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
strum_macros = "0.26.2"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["tokio-macros", "rt-multi-thread", "macros"] }
url = { version = "2.5.0", features = ["serde"] }
